Fix layout problem on iphone 5
Add media query at 320px to make font size smaller

--- a/styles/style.css
+++ b/styles/style.css
@@ -120,3 +120,9 @@ body {
 		font-size: 50px;
 	}
 }
+
+@media screen and (max-width: 320px) {
+	.siteWrap h1{
+		font-size: 40px;
+	}
+}
